--- a/src/2R_manipulator_dynamics.ipynb
+++ b/src/2R_manipulator_dynamics.ipynb
@@ -21,7 +21,7 @@
     "from IPython.display import Image \n",
     "from IPython.display import IFrame\n",
     "IFrame(\"https://github.com/shyamashi/model_predictive_control/blob/master/src/2R%20manipulator%20theory/2R_manipulator_EOM.pdf\", width=900, height=800)\n",
-    "Image(filename='/home/ar0058/Dropbox/Teaching Assistanship/Dynamics/Homework 3/2R_manip_2.png') "
+    "Image(filename='/home/test/Ash/Repo/model_predictive_control/src/2R manipulator theory/2R_manip_2.png') "
    ]
   },
   {
@@ -337,32 +337,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'lp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m--------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-90cc6521e7b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfwd_kin_numeric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'lp' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MassMatrix = \n",
+      " Matrix([[1.0*I1_zz + 1.0*I2_zz + 1.0*m1*r1**2 + 1.0*m2*(l_1**2 + 2*l_1*r2*cos(q2(t)) + r2**2), 1.0*I2_zz + 1.0*m2*r2*(l_1*cos(q2(t)) + r2)], [1.0*I2_zz + 1.0*m2*r2*(l_1*cos(q2(t)) + r2), 1.0*I2_zz + 1.0*m2*r2**2]]) \n",
+      "\n",
+      " Coriolis_&_CentripetalVector = \n",
+      " Matrix([[-1.0*l_1*m2*r2*(2*Derivative(q1(t), t) + Derivative(q2(t), t))*sin(q2(t))*Derivative(q2(t), t)], [1.0*l_1*m2*r2*sin(q2(t))*Derivative(q1(t), t)**2]]) \n",
+      "\n",
+      " Gravityvector = \n",
+      " Matrix([[g*(l_1*m2*cos(q1(t)) + m1*r1*cos(q1(t)) + m2*r2*cos(q1(t) + q2(t)))], [g*m2*r2*cos(q1(t) + q2(t))]])\n"
      ]
     }
    ],
    "source": [
     "# output\n",
-    "pos, rot = fwd_kin_numeric(lp, qp)"
+    "M, C, G = get_dyn_para(q, qd)\n",
+    "print('MassMatrix = \\n', M, '\\n\\n Coriolis_&_CentripetalVector = \\n', C, '\\n\\n Gravityvector = \\n', G)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
