--- a/src/2R_manipulator_dynamics.ipynb
+++ b/src/2R_manipulator_dynamics.ipynb
@@ -39,11 +39,9 @@
     {
      "data": {
       "text/latex": [
-       "\\begin{multline}\n",
-       "\t(I_1 + I_2 + m_2l_1^2 + m_1 r_{1_{cm}}^2 + m_2 r_{2_{cm}}^2 + 2 m_2 l_1 r_{2_{cm}} \\cos\\theta_2)\\ddot{\\theta}_1 + (I_2 + m_2 r_{2_{cm}}^2 + m_2 l_1 r_{2_{cm}} \\cos\\theta_2) \\ddot{\\theta}_2 - \\\\m_2 l_1 r_{2_{cm}} \\sin\\theta_2(2\\dot{\\theta}_1 + \\dot{\\theta}_2) \\dot{\\theta}_2 + m_2 g (l_1 \\cos\\theta_1 + r_{2_{cm}} \\cos(\\theta_1 + \\theta_2)) +m_1 g r_{1_{cm}} \\cos\\theta_1 = \\tau_1\n",
-       "\t\\\\\n",
-       "\t(I_2 + m_2 r_{2_{cm}}^2 + m_2l_1r_{2_{cm}} \\cos\\theta_2) \\ddot{\\theta}_1 + (I_2 + m_2 r_{2_{cm}}^2) \\ddot{\\theta}_2 + m_2 l_1 r_{2_{cm}} \\sin\\theta_2 \\dot{\\theta}_1^2 + m_2 r_{2_{cm}} g \\cos(\\theta_1 + \\theta_2) = \\tau_2\n",
-       "\\end{multline}"
+       "\\begin{align*}\n",
+       "M(q)\\ddot{q} + C(q, \\dot{q}) + G(q) = \\tau\n",
+       "\\end{align*}"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -60,16 +58,43 @@
     "M(q)\\ddot{q} + C(q, \\dot{q}) + G(q) = \\tau\n",
     "\\end{align*}\"\"\")\n",
     "\n",
-    "Latex(r\"\"\"\\begin{multline}\n",
-    "\t(I_1 + I_2 + m_2l_1^2 + m_1 r_{1_{cm}}^2 + m_2 r_{2_{cm}}^2 + 2 m_2 l_1 r_{2_{cm}} \\cos\\theta_2)\\ddot{\\theta}_1 + (I_2 + m_2 r_{2_{cm}}^2 + m_2 l_1 r_{2_{cm}} \\cos\\theta_2) \\ddot{\\theta}_2 - \\\\m_2 l_1 r_{2_{cm}} \\sin\\theta_2(2\\dot{\\theta}_1 + \\dot{\\theta}_2) \\dot{\\theta}_2 + m_2 g (l_1 \\cos\\theta_1 + r_{2_{cm}} \\cos(\\theta_1 + \\theta_2)) +m_1 g r_{1_{cm}} \\cos\\theta_1 = \\tau_1\n",
-    "\t\\\\\n",
-    "\t(I_2 + m_2 r_{2_{cm}}^2 + m_2l_1r_{2_{cm}} \\cos\\theta_2) \\ddot{\\theta}_1 + (I_2 + m_2 r_{2_{cm}}^2) \\ddot{\\theta}_2 + m_2 l_1 r_{2_{cm}} \\sin\\theta_2 \\dot{\\theta}_1^2 + m_2 r_{2_{cm}} g \\cos(\\theta_1 + \\theta_2) = \\tau_2\n",
-    "\\end{multline}\"\"\")\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{multline}\n",
+       "(I_1 + I_2 + m_2l_1^2 + m_1 r_{1_{cm}}^2 + m_2 r_{2_{cm}}^2 + 2 m_2 l_1 r_{2_{cm}} \\cos\\theta_2)\\ddot{\\theta}_1 + (I_2 + m_2 r_{2_{cm}}^2 + m_2 l_1 r_{2_{cm}} \\cos\\theta_2) \\ddot{\\theta}_2 - \\\\m_2 l_1 r_{2_{cm}} \\sin\\theta_2(2\\dot{\\theta}_1 + \\dot{\\theta}_2) \\dot{\\theta}_2 + m_2 g (l_1 \\cos\\theta_1 + r_{2_{cm}} \\cos(\\theta_1 + \\theta_2)) +m_1 g r_{1_{cm}} \\cos\\theta_1 = \\tau_1\n",
+       "\\\\\n",
+       "(I_2 + m_2 r_{2_{cm}}^2 + m_2l_1r_{2_{cm}} \\cos\\theta_2) \\ddot{\\theta}_1 + (I_2 + m_2 r_{2_{cm}}^2) \\ddot{\\theta}_2 + m_2 l_1 r_{2_{cm}} \\sin\\theta_2 \\dot{\\theta}_1^2 + m_2 r_{2_{cm}} g \\cos(\\theta_1 + \\theta_2) = \\tau_2\n",
+       "\\end{multline}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Latex(r\"\"\"\\begin{multline}\n",
+    "(I_1 + I_2 + m_2l_1^2 + m_1 r_{1_{cm}}^2 + m_2 r_{2_{cm}}^2 + 2 m_2 l_1 r_{2_{cm}} \\cos\\theta_2)\\ddot{\\theta}_1 + (I_2 + m_2 r_{2_{cm}}^2 + m_2 l_1 r_{2_{cm}} \\cos\\theta_2) \\ddot{\\theta}_2 - \\\\m_2 l_1 r_{2_{cm}} \\sin\\theta_2(2\\dot{\\theta}_1 + \\dot{\\theta}_2) \\dot{\\theta}_2 + m_2 g (l_1 \\cos\\theta_1 + r_{2_{cm}} \\cos(\\theta_1 + \\theta_2)) +m_1 g r_{1_{cm}} \\cos\\theta_1 = \\tau_1\n",
+    "\\\\\n",
+    "(I_2 + m_2 r_{2_{cm}}^2 + m_2l_1r_{2_{cm}} \\cos\\theta_2) \\ddot{\\theta}_1 + (I_2 + m_2 r_{2_{cm}}^2) \\ddot{\\theta}_2 + m_2 l_1 r_{2_{cm}} \\sin\\theta_2 \\dot{\\theta}_1^2 + m_2 r_{2_{cm}} g \\cos(\\theta_1 + \\theta_2) = \\tau_2\n",
+    "\\end{multline}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +205,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +240,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
