--- a/src/2R_manipulator_dynamics.ipynb
+++ b/src/2R_manipulator_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,14 +44,12 @@
     "from IPython.display import Latex\n",
     "Latex(r\"\"\"\\begin{align*}\n",
     "M(q)\\ddot{q} + C(q, \\dot{q}) + G(q) = \\tau\n",
-    "\\end{align*}\"\"\")\n",
-    "\n",
-    "\n"
+    "\\end{align*}\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +65,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +191,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +226,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,27 +348,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('MassMatrix = \\n', Matrix([\n",
-      "[1.0*I1_zz + 1.0*I2_zz + 1.0*m1*r1**2 + 1.0*m2*(l_1**2 + 2*l_1*r2*cos(q2(t)) + r2**2), 1.0*I2_zz + 1.0*m2*r2*(l_1*cos(q2(t)) + r2)],\n",
-      "[                                         1.0*I2_zz + 1.0*m2*r2*(l_1*cos(q2(t)) + r2),                    1.0*I2_zz + 1.0*m2*r2**2]]), '\\n\\n Coriolis_&_CentripetalVector = \\n', Matrix([\n",
-      "[-1.0*l_1*m2*r2*(2*Derivative(q1(t), t) + Derivative(q2(t), t))*sin(q2(t))*Derivative(q2(t), t)],\n",
-      "[                                              1.0*l_1*m2*r2*sin(q2(t))*Derivative(q1(t), t)**2]]), '\\n\\n Gravityvector = \\n', Matrix([\n",
-      "[g*(l_1*m2*cos(q1(t)) + m1*r1*cos(q1(t)) + m2*r2*cos(q1(t) + q2(t)))],\n",
-      "[                                         g*m2*r2*cos(q1(t) + q2(t))]]))\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}- 1.0 l_{1} m_{2} r_{2} \\left(2 \\frac{d}{d t} \\operatorname{q_{1}}{\\left(t \\right)} + \\frac{d}{d t} \\operatorname{q_{2}}{\\left(t \\right)}\\right) \\sin{\\left(\\operatorname{q_{2}}{\\left(t \\right)} \\right)} \\frac{d}{d t} \\operatorname{q_{2}}{\\left(t \\right)}\\\\1.0 l_{1} m_{2} r_{2} \\sin{\\left(\\operatorname{q_{2}}{\\left(t \\right)} \\right)} \\left(\\frac{d}{d t} \\operatorname{q_{1}}{\\left(t \\right)}\\right)^{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[-1.0*l_1*m2*r2*(2*Derivative(q1(t), t) + Derivative(q2(t), t))*sin(q2(t))*Derivative(q2(t), t)],\n",
+       "[                                              1.0*l_1*m2*r2*sin(q2(t))*Derivative(q1(t), t)**2]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# output\n",
     "M, C, G = get_dyn_para(q, qd)\n",
-    "print('MassMatrix = \\n', M, '\\n\\n Coriolis_&_CentripetalVector = \\n', C, '\\n\\n Gravityvector = \\n', G)"
+    "# print('MassMatrix = \\n', M, '\\n\\n Coriolis_&_CentripetalVector = \\n', C, '\\n\\n Gravityvector = \\n', G)\n",
+    "C"
    ]
   },
   {
@@ -390,14 +391,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
