--- a/src/ffmpc.ipynb
+++ b/src/ffmpc.ipynb
@@ -2,21 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append('/home/ash/Ash/repo/model_predictive_control/src/MassMatrix')\n",
+    "\n",
+    "# module_path = os.path.abspath(os.path.join('..'))\n",
+    "# if module_path not in sys.path:\n",
+    "#     sys.path.append(module_path+\"pympc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pympc.geometry'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-4efaeeaf2b50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# from Lm_derivative.wrapper_module_5 import autofunc_c as Lm_d\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpympc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgeometry\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolyhedron\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPolyhedron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpympc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdynamics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiscrete_time_systems\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLinearSystem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpympc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrollers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mModelPredictiveController\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pympc.geometry'"
+     ]
+    }
+   ],
+   "source": [
     "import numpy as np\n",
-    "from sympy import *\n",
+    "# from sympy import *\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
     "\n",
-    "from MassMatrix.wrapper_module_0 import autofunc_c as MassMatrix\n",
-    "from CoriolisVector.wrapper_module_1 import autofunc_c as CoriolisVector\n",
-    "from Ls.wrapper_module_2 import autofunc_c as Ls\n",
-    "from Lm.wrapper_module_3 import autofunc_c as Lm\n",
-    "from Ls_derivative.wrapper_module_4 import autofunc_c as Ls_d\n",
-    "from Lm_derivative.wrapper_module_5 import autofunc_c as Lm_d\n",
+    "# from MassMatrix.wrapper_module_0 import autofunc_c as MassMatrix\n",
+    "# from CoriolisVector.wrapper_module_1 import autofunc_c as CoriolisVector\n",
+    "# from Ls.wrapper_module_2 import autofunc_c as Ls\n",
+    "# from Lm.wrapper_module_3 import autofunc_c as Lm\n",
+    "# from Ls_derivative.wrapper_module_4 import autofunc_c as Ls_d\n",
+    "# from Lm_derivative.wrapper_module_5 import autofunc_c as Lm_d\n",
     "\n",
     "from pympc.geometry.polyhedron import Polyhedron\n",
     "from pympc.dynamics.discrete_time_systems import LinearSystem\n",
@@ -2309,7 +2336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
