--- a/src/iros/iros_dynamics_7DoF.ipynb
+++ b/src/iros/iros_dynamics_7DoF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,18 +689,20 @@
     "symbolic = True\n",
     "q, qd = kin.q[3:], kin.qd[3:]\n",
     "alpha, beta, gamma = symbols('alpha beta gamma')  # spacecraft angles\n",
-    "alpha_d, beta_d, gamma_d = symbols('alpha_d beta_d gamma_d')  # spacecraft velocities\n",
-    "theta_1, theta_2, theta_3, theta_4, theta_5, theta_6, theta_7 = symbols('theta_1 theta_2 theta_3 theta_4 theta_5 theta_6 theta_7') # joint angles\n",
-    "theta_1d, theta_2d, theta_3d, theta_4d, theta_5d, theta_6d, theta_7d = symbols('theta_1d theta_2d theta_3d theta_4d theta_5d theta_6d theta_7d')\n",
+    "alphaDot, betaDot, gammaDot = symbols('alphaDot betaDot gammaDot')  # spacecraft velocities\n",
+    "theta = symbols('theta1:8')  # joint angles\n",
+    "thetaDot = symbols('thetaDot1:8')  # joint velocities\n",
+    "# theta_1, theta_2, theta_3, theta_4, theta_5, theta_6, theta_7 = symbols('theta_1 theta_2 theta_3 theta_4 theta_5 theta_6 theta_7') # joint angles\n",
+    "# theta_1d, theta_2d, theta_3d, theta_4d, theta_5d, theta_6d, theta_7d = symbols('theta_1d theta_2d theta_3d theta_4d theta_5d theta_6d theta_7d')\n",
     "ang_s = [alpha, beta, gamma]\n",
-    "omega_s = [alpha_d, beta_d, gamma_d]\n",
-    "theta = [theta_1, theta_2, theta_3, theta_4, theta_5, theta_6, theta_7]\n",
-    "theta_d = [theta_1d, theta_2d, theta_3d, theta_4d, theta_5d, theta_6d, theta_7d]"
+    "omega_s = [alphaDot, betaDot, gammaDot]\n",
+    "# theta = [theta_1, theta_2, theta_3, theta_4, theta_5, theta_6, theta_7]\n",
+    "# theta_d = [theta_1d, theta_2d, theta_3d, theta_4d, theta_5d, theta_6d, theta_7d]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,63 +716,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# M, C = dyn.get_dyn_para(b0=kin.b0, symbolic=symbolic)\n",
+    "# Mt = dyn.substitute(M, ang_s0=ang_s, q0=theta, omega_s=omega_s, dq=theta_d)\n",
+    "# print('found Mt')\n",
+    "# Ct = dyn.substitute(C, ang_s0=ang_s, q0=theta, omega_s=omega_s, dq=theta_d)\n",
+    "# print('found Ct')\n",
+    "\n",
+    "# with open('MassMat_sym.pickle', 'wb') as outM:\n",
+    "#     outM.write(pickle.dumps(Mt))\n",
+    "\n",
+    "# with open('Corioli_sym.pickle', 'wb') as outC:\n",
+    "#     outC.write(pickle.dumps(Ct))\n",
+    "# print('done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "omega, vel_com, _ = dyn.velocities_frm_momentum_conservation(b0=kin.b0, symbolic=symbolic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "I = dyn.momentOfInertia_transform(b0=kin.b0, symbolic=symbolic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "omega_sym = dyn.substitute(omega, ang_s0=ang_s, q0=theta, omega_s=omega_s, dq=thetaDot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vel_com_sym = dyn.substitute(vel_com, ang_s0=ang_s, q0=theta, omega_s=omega_s, dq=thetaDot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "I_sym = []\n",
+    "for i in range(len(I)):\n",
+    "    I_sym.append(dyn.substitute(I[i], ang_s0=ang_s, q0=theta, omega_s=omega_s, dq=thetaDot))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = 0\n",
+    "for i in range(nDoF + 1):\n",
+    "    K += 0.5*dyn.mass[i]*vel_com_sym[:, i].dot(vel_com_sym[:, i]) + 0.5*omega_sym[:, i].dot(I_sym[i] @ omega_sym[:, i])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "found Mt\n",
-      "found Ct\n",
-      "done\n"
-     ]
-    }
-   ],
-   "source": [
-    "M, C = dyn.get_dyn_para(b0=kin.b0, symbolic=symbolic)\n",
-    "Mt = dyn.substitute(M, ang_s0=ang_s, q0=theta, omega_s=omega_s, dq=theta_d)\n",
-    "print('found Mt')\n",
-    "Ct = dyn.substitute(C, ang_s0=ang_s, q0=theta, omega_s=omega_s, dq=theta_d)\n",
-    "print('found Ct')\n",
-    "\n",
-    "with open('MassMat_sym.pickle', 'wb') as outM:\n",
-    "    outM.write(pickle.dumps(Mt))\n",
-    "\n",
-    "with open('Corioli_sym.pickle', 'wb') as outC:\n",
-    "    outC.write(pickle.dumps(Ct))\n",
-    "print('done')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = z1, z2, z3 = symbols('z1:4')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "(z1, z2, z3)"
+       "([ang_xs(t),\n",
+       "  ang_ys(t),\n",
+       "  ang_zs(t),\n",
+       "  q1(t),\n",
+       "  q2(t),\n",
+       "  q3(t),\n",
+       "  q4(t),\n",
+       "  q5(t),\n",
+       "  q6(t),\n",
+       "  q7(t)],\n",
+       " [Derivative(ang_xs(t), t),\n",
+       "  Derivative(ang_ys(t), t),\n",
+       "  Derivative(ang_zs(t), t),\n",
+       "  Derivative(q1(t), t),\n",
+       "  Derivative(q2(t), t),\n",
+       "  Derivative(q3(t), t),\n",
+       "  Derivative(q4(t), t),\n",
+       "  Derivative(q5(t), t),\n",
+       "  Derivative(q6(t), t),\n",
+       "  Derivative(q7(t), t)])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z"
+    "q, qd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[alpha, beta, gamma, theta1, theta2, theta3, theta4, theta5, theta6, theta7]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ang_s.extend(theta)\n",
+    "ang_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[alphaDot,\n",
+       " betaDot,\n",
+       " gammaDot,\n",
+       " thetaDot1,\n",
+       " thetaDot2,\n",
+       " thetaDot3,\n",
+       " thetaDot4,\n",
+       " thetaDot5,\n",
+       " thetaDot6,\n",
+       " thetaDot7]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "omega_s.extend(thetaDot)\n",
+    "omega_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = transpose(Matrix([[K]]).jacobian(omega_s))\n",
+    "M = temp.jacobian(omega_s) #.applyfunc(trigsimp)  # Mass matrix\n",
+    "C = temp.jacobian(ang_s) * Matrix(omega_s) - transpose(Matrix([[K]]).jacobian(ang_s))  # Coriolis vector\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ang_s_num = np.random.randn(3) *0.1\n",
+    "ang_sd_num = np.random.randn(3) *0.1\n",
+    "q_num = np.random.randn(7), 0.2\n",
+    "qDot_num = np.random.randn(7), 0.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in range(len(ang_s)):\n",
+    "#     Mass = msubs(M, {ang_s[i]:np.random.randn(1), omega_s[i]:np.random.randn(1)})\n",
+    "# Mass\n",
+    "msubs(M, {alpha:0.1, beta:0.12, gamma:0.13, theta:np.random.randn(7), thetaDot:np.random.randn(7), alphaDot:0.1, betaDot:0.12, gammaDot:0.13})"
    ]
   },
   {
@@ -783,9 +940,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv3.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -797,7 +954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
